--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "@cocreate/action": "^1.2.26",
     "@cocreate/docs": "^1.2.26",
-    "@cocreate/hosting": "^1.2.22"
+    "@cocreate/hosting": "^1.2.22",
+    "@cocreate/render": "^1.1.25"
   }
 }
