--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cocreate/validation",
   "version": "1.1.2",
-  "description": "A simple validation component in vanilla javascript. Easily configured using HTML5 data-attributes and/or JavaScript API.",
+  "description": "A simple validation component in vanilla javascript. Easily configured using HTML5 attributes and/or JavaScript API.",
   "keywords": [
     "validation",
     "cocreate",
