--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -61,9 +59,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "^1.5.11",
-    "@cocreate/docs": "^1.3.17",
-    "@cocreate/hosting": "^1.4.0",
-    "@cocreate/render": "^1.15.9"
+    "@cocreate/actions": "^1.5.13",
+    "@cocreate/docs": "^1.3.20",
+    "@cocreate/hosting": "^1.4.3",
+    "@cocreate/render": "^1.16.1"
   }
 }
