--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -61,9 +59,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "^1.5.21",
-    "@cocreate/docs": "^1.4.3",
-    "@cocreate/hosting": "^1.6.2",
-    "@cocreate/render": "^1.16.8"
+    "@cocreate/actions": "^1.5.22",
+    "@cocreate/docs": "^1.4.4",
+    "@cocreate/hosting": "^1.6.3",
+    "@cocreate/render": "^1.16.9"
   }
 }
