--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -61,9 +59,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "^1.5.25",
-    "@cocreate/docs": "^1.4.7",
-    "@cocreate/hosting": "^1.6.6",
-    "@cocreate/render": "^1.16.12"
+    "@cocreate/actions": "^1.5.26",
+    "@cocreate/docs": "^1.4.8",
+    "@cocreate/hosting": "^1.6.7",
+    "@cocreate/render": "^1.16.13"
   }
 }
