--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -61,9 +59,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "^1.5.34",
-    "@cocreate/docs": "^1.4.18",
-    "@cocreate/hosting": "^1.6.17",
-    "@cocreate/render": "^1.17.0"
+    "@cocreate/actions": "^1.5.35",
+    "@cocreate/docs": "^1.4.19",
+    "@cocreate/hosting": "^1.6.18",
+    "@cocreate/render": "^1.17.1"
   }
 }
