--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -60,9 +58,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "^1.5.41",
-    "@cocreate/docs": "^1.4.23",
-    "@cocreate/hosting": "^1.6.24",
-    "@cocreate/render": "^1.17.7"
+    "@cocreate/actions": "^1.5.42",
+    "@cocreate/docs": "^1.4.24",
+    "@cocreate/hosting": "^1.6.25",
+    "@cocreate/render": "^1.17.8"
   }
 }
