--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -60,9 +58,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "^1.5.53",
-    "@cocreate/docs": "^1.5.7",
-    "@cocreate/hosting": "^1.7.7",
-    "@cocreate/render": "^1.21.0"
+    "@cocreate/actions": "^1.5.54",
+    "@cocreate/docs": "^1.5.8",
+    "@cocreate/hosting": "^1.7.8",
+    "@cocreate/render": "^1.21.1"
   }
 }
