--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -60,9 +58,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "^1.5.55",
-    "@cocreate/docs": "^1.5.10",
-    "@cocreate/hosting": "^1.7.10",
-    "@cocreate/render": "^1.21.3"
+    "@cocreate/actions": "^1.5.56",
+    "@cocreate/docs": "^1.5.11",
+    "@cocreate/hosting": "^1.7.11",
+    "@cocreate/render": "^1.21.4"
   }
 }
