--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "html5-framework",
     "javascript-framework"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": { "access": "public" },
   "scripts": {
     "start": "npx webpack --config webpack.config.js",
     "build": "NODE_ENV=production npx webpack --config webpack.config.js",
@@ -60,9 +58,9 @@
     "webpack-log": "^3.0.1"
   },
   "dependencies": {
-    "@cocreate/actions": "^1.5.57",
-    "@cocreate/docs": "^1.5.12",
-    "@cocreate/hosting": "^1.7.12",
-    "@cocreate/render": "^1.21.5"
+    "@cocreate/actions": "^1.5.58",
+    "@cocreate/docs": "^1.5.13",
+    "@cocreate/hosting": "^1.7.13",
+    "@cocreate/render": "^1.21.6"
   }
 }
